@@ -1,3 +1,7 @@
+* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.2
 - Fixed formatting in the metadata.json file.
 
